Remove header media queries to fix bottom border overlap

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -49,11 +49,3 @@
 .letter-standout {
   color: #DA0064
 }
-
-@media screen and (min-height: 1000px) {
-
-  .Header--container {
-    height: 150px;
-  }
-
-}
